<?xml version="1.0"?>
<package format="2">
  <name>rtr_joycon</name>
  <version>0.0.0</version>
  <description>The rtr_joycon package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>radial_menu_msgs</depend>
  <depend>radial_menu_model</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>tf2</depend>
  
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rviz</test_depend>

</package>
